--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .container {
   min-height: 100vh;
   /* background-color: white; */
@@ -10,7 +14,7 @@
 .medical-form {
   color: black;
   max-width: 50%;
-  margin: 80px auto 20px ;
+  margin: 80px auto 20px;
   background-color: rgba(202, 219, 243, 0.619);
   padding: 20px;
   border-radius: 9px;
@@ -18,11 +22,11 @@
   justify-content: center;
   align-items: center;
 }
-* {
+/* * {
   padding: 0;
   margin: 0;
   font-family: "Quicksand", sans-serif;
-}
+} */
 .navbarr {
   box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.716);
   background-color: rgb(59, 130, 246);
@@ -30,5 +34,107 @@
 .submit-btn {
   /* margin :auto; */
   margin-left: 43%;
+}
+body {
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
+/* header {
+  background-color: #f0f0f0;
+  padding: 20px;
+  text-align: center;
+} */
+
+h1,
+h2 {
+  margin: 0;
+}
+
+main {
+  padding: 50px;
+}
+
+.hero {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 50px;
+}
+
+.hero-text {
+  flex: 1;
+}
+
+.hero-images {
+  flex: 1;
+  display: flex;
+  justify-content: space-between;
+}
+
+.hero-images img {
+  width: 100%;
+  height: auto;
+}
+
+.cta-buttons {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.button {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+input[type="file"] {
+  display: none;
+}
+.canva {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-top: 56.2225%;
+  padding-bottom: 0;
+  box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0.16);
+  margin-top: 1.6em;
+  margin-bottom: 0.9em;
+  overflow: hidden;
+  border-radius: 8px;
+  will-change: transform;
+}
+.canva-frame {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+.loading-animation {
+  position: fixed; /* Overlays the entire viewport */
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh; /* Fills the entire viewport */
+  background-color: rgba(0, 0, 0, 0.5); /* Optional: Semi-transparent background */
+  display: flex; /* Center the animation horizontally and vertically */
+  justify-content: center;
+  align-items: center;
+  z-index: 999; /* Ensure the animation is on top of other elements */
+  animation: fade-out 1s ease-in-out forwards; /* Animation properties */
+}
+
+@keyframes fade-out {
+  from { opacity: 2; }
+  to { opacity: 0; }
 }
