--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,7 @@ input[type="file"] {
   height: 0;
   padding-top: 56.2225%;
   padding-bottom: 0;
-  box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0.16);
+  /* box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0.16); */
   margin-top: 1.6em;
   margin-bottom: 0.9em;
   overflow: hidden;
